--- a/buyers.html
+++ b/buyers.html
@@ -162,45 +162,41 @@
                 </div>
             </div>
             <div class="benefits-content">
-                <h2 class="title text-left bottom blue"><span>Benefits of the SiloSys Inventory Mangement</span>
+                <h2 class="title text-left bottom light-green"><span>Benefits of the Seed Audit</span>
                 </h2>
                 <div class="row">
                     <div class="col-md-6">
                         <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Reduces uncertainty and cycles of debt as
-                                Producers
-                                receive payments more quickly and with more payment options.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Smart contracts guarantee reliable and
-                                efficient
-                                transactions. They are executed automatically with no additional intervention
-                                needed, eliminating costs and delays. </li>
-                            <li><span class="fa fa-plus text-yellow"></span>Easily create complex, multi-party contracts
-                                utilizing online tools.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Facilitates non-local and international
-                                market
-                                access to small or medium size Producers.</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Capture receipts for seeds and
+                                fertilizers</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Geofence your farm land and planting
+                                area</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Auditor portal for independent
+                                third-party verifiers</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Securely store all certification
+                                records</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Document crops with photos linked to
+                                additional data including geolocation</li>
                         </ul>
                     </div>
                     <div class="col-md-6">
                         <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Producers can hedge using forward contracts
-                                and
-                                optional insurance products.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Ability to track commodities from the field
-                                enables
-                                lenders to open up financing for growers.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>All data is securely and accurately stored
-                                on the
-                                blockchain, eliminating waste and fraud.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Manage your transactions and data from your
-                                mobile
-                                device.</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Avoid fraud through complete in-app
+                                documentation of commodity data</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Complete traceability starts at the
+                                seed stage </li>
+                            <li><span class="fa fa-plus text-light-green"></span>Facilitate virtual meetings and
+                                trainings with agronomists</li>
+                            <li><span class="fa fa-plus text-light-green"></span>Seamlessly integrates with GrainChain’s
+                                suite of products or can be used independently</li>
                         </ul>
-                        <a class="btn bg-yellow text-white mt-3" href="#">Learn More About Trumodity</a>
+                        <a class="btn bg-light-green text-white mt-3" href="#">Learn More About Seed Audit</a>
                     </div>
                 </div>
             </div>
 
+
+            <!-- Silosys -->
             <div class="benefits-box   wow animate__animated animate__fadeInUp animate__delay0-5s">
                 <div class="logo-holder">
                     <img src="images/silosys-logo-2.png" alt="">
@@ -215,45 +211,45 @@
             </div>
 
             <div class="benefits-content">
-                <h2 class="title text-left bottom orange"><span>Benefits of the Trumodity Transaction Platform</span>
-                </h2>
+                <h2 class="title text-left bottom blue"><span>Benefits of the SiloSys Platform</span> </h2>
                 <div class="row">
                     <div class="col-md-6">
                         <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Reduces uncertainty and cycles of debt as
-                                Producers
-                                receive payments more quickly and with more payment options.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Smart contracts guarantee reliable and
-                                efficient
-                                transactions. They are executed automatically with no additional intervention
-                                needed, eliminating costs and delays. </li>
-                            <li><span class="fa fa-plus text-yellow"></span>Easily create complex, multi-party contracts
-                                utilizing online tools.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Facilitates non-local and international
-                                market
-                                access to small or medium size Producers.</li>
+                            <li><span class="fa fa-plus text-blue"></span>Instant access to harvest inventory data such
+                                as quantity and quality with real time tracking </li>
+                            <li><span class="fa fa-plus text-blue"></span>Quick payments for commodities sold </li>
+                            <li><span class="fa fa-plus text-blue"></span>24/7 real time access to portal through mobile
+                                device </li>
+                            <li><span class="fa fa-plus text-blue"></span>Instant transfer of tradable title for
+                                purchased commodity </li>
+                            <li><span class="fa fa-plus text-blue"></span>Improve operational efficiencies through
+                                digitizing and automating workflows </li>
                         </ul>
                     </div>
                     <div class="col-md-6">
                         <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Producers can hedge using forward contracts
-                                and
-                                optional insurance products.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Ability to track commodities from the field
-                                enables
-                                lenders to open up financing for growers.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>All data is securely and accurately stored
-                                on the
-                                blockchain, eliminating waste and fraud.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Manage your transactions and data from your
-                                mobile
-                                device.</li>
+                            <li><span class="fa fa-plus text-blue"></span>Reduction of errors and redundancy by
+                                eliminating manual entry
+                            </li>
+                            <li><span class="fa fa-plus text-blue"></span>Generate instant audit documents for
+                                government and insurance inspections
+                            </li>
+                            <li><span class="fa fa-plus text-blue"></span>Attract more customers by offering faster
+                                payments and title assignment
+                            </li>
+                            <li><span class="fa fa-plus text-blue"></span>Feel secure with data and transactions
+                                recorded and stored on the cloud on an immutable blockchain
+                            </li>
                         </ul>
-                        <a class="btn bg-yellow text-white mt-3" href="#">Learn More About Trumodity</a>
+                        <a class="btn bg-blue text-white mt-3" href="#">Learn More About Seed Audit</a>
                     </div>
                 </div>
             </div>
 
+            <!-- Silosys -->
+
+
+            <!-- HarvX -->
             <div class="benefits-box  wow animate__animated animate__fadeInUp animate__delay0-8s">
                 <div class="logo-holder">
                     <img src="images/harvex-logo-2.png" alt="">
@@ -266,45 +262,44 @@
                 </div>
             </div>
             <div class="benefits-content">
-                <h2 class="title text-left bottom orange"><span>Benefits of the Trumodity Transaction Platform</span>
+                <h2 class="title text-left bottom orange"><span>Benefits of the HarvX Platform</span>
                 </h2>
                 <div class="row">
                     <div class="col-md-6">
                         <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Reduces uncertainty and cycles of debt as
-                                Producers
-                                receive payments more quickly and with more payment options.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Smart contracts guarantee reliable and
-                                efficient
-                                transactions. They are executed automatically with no additional intervention
-                                needed, eliminating costs and delays. </li>
-                            <li><span class="fa fa-plus text-yellow"></span>Easily create complex, multi-party contracts
-                                utilizing online tools.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Facilitates non-local and international
-                                market
-                                access to small or medium size Producers.</li>
+                            <li><span class="fa fa-plus text-red"></span>Digitized field tickets minimize mistakes and
+                                lost inventory</li>
+                            <li><span class="fa fa-plus text-red"></span>Schedule and coordinate deliveries online</li>
+                            <li><span class="fa fa-plus text-red"></span>Track inventory in real-time from any location
+                            </li>
+                            <li><span class="fa fa-plus text-red"></span>Receive delivery confirmation and verify
+                                quantity and quality data in real-time</li>
+
                         </ul>
                     </div>
                     <div class="col-md-6">
                         <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Producers can hedge using forward contracts
-                                and
-                                optional insurance products.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Ability to track commodities from the field
-                                enables
-                                lenders to open up financing for growers.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>All data is securely and accurately stored
-                                on the
-                                blockchain, eliminating waste and fraud.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Manage your transactions and data from your
-                                mobile
-                                device.</li>
+                            <li><span class="fa fa-plus text-red"></span>Guide drivers through your farm directly to
+                                your harvest with our Follow Me In/Follow Me Out feature
+                            </li>
+                            <li><span class="fa fa-plus text-red"></span>Submit payments to drivers digitally
+                            </li>
+                            <li><span class="fa fa-plus text-red"></span>Simplified on-the-spot reporting
+                            </li>
+                            <li><span class="fa fa-plus text-red"></span>Mobile app accessible from anywhere
+                            </li>
+
+
                         </ul>
-                        <a class="btn bg-yellow text-white mt-3" href="#">Learn More About Trumodity</a>
+                        <a class="btn bg-red text-white mt-3" href="#">Learn More About HarvX</a>
                     </div>
                 </div>
             </div>
-            <div class="benefits-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
+            <!-- HarvX -->
+
+
+            <!-- block chain -->
+            <a href="#" class="benefits-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
                 <div class="logo-holder">
                     <img src="images/block-chain-logo.png" alt="">
                 </div>
@@ -314,46 +309,8 @@
                 <div class="icon-holder">
                     <img src="images/darkgreen-arrow.png" alt="">
                 </div>
-            </div>
-            <div class="benefits-content">
-                <h2 class="title text-left bottom orange"><span>Benefits of the Trumodity Transaction Platform</span>
-                </h2>
-                <div class="row">
-                    <div class="col-md-6">
-                        <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Reduces uncertainty and cycles of debt as
-                                Producers
-                                receive payments more quickly and with more payment options.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Smart contracts guarantee reliable and
-                                efficient
-                                transactions. They are executed automatically with no additional intervention
-                                needed, eliminating costs and delays. </li>
-                            <li><span class="fa fa-plus text-yellow"></span>Easily create complex, multi-party contracts
-                                utilizing online tools.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Facilitates non-local and international
-                                market
-                                access to small or medium size Producers.</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul>
-                            <li><span class="fa fa-plus text-yellow"></span>Producers can hedge using forward contracts
-                                and
-                                optional insurance products.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Ability to track commodities from the field
-                                enables
-                                lenders to open up financing for growers.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>All data is securely and accurately stored
-                                on the
-                                blockchain, eliminating waste and fraud.</li>
-                            <li><span class="fa fa-plus text-yellow"></span>Manage your transactions and data from your
-                                mobile
-                                device.</li>
-                        </ul>
-                        <a class="btn bg-yellow text-white mt-3" href="#">Learn More About Trumodity</a>
-                    </div>
-                </div>
-            </div>
+            </a>
+                <!-- block chain -->          
         </div>
     </section>
     <!-- benefits  details -->
@@ -555,7 +512,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
