--- a/careers.html
+++ b/careers.html
@@ -162,6 +162,7 @@
                         </div>
                     </div>
             </div>
+            <button class="btn btn-primary btn-view-more">View More</button>
         </div>
     </section>
 
@@ -285,7 +286,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
