--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- header ends her -->
     <section class="banner">
         <div class="container">
-            <div class="banner-item-list owl-theme owl-carousel">
+            <div class="banner-item-list">
                 <div class="banner-item">
                     <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
                     </h1>
@@ -63,22 +63,8 @@
                     <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
                         src="images/banner-img.png" alt="banner image">
                 </div>
-                <div class="banner-item">
-                    <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
-                    </h1>
-                    <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
-                    id="banner-enquiry">Book A Demo</button>
-                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
-                    src="images/banner-img.png" alt="banner image">
-                </div>
-                <div class="banner-item">
-                    <h1 class="banner-title wow animate__animated animate__fadeInUp">Creating Supply Chain Efficiency
-                    </h1>
-                    <button class="btn btn-primary wow animate__animated animate__fadeInUp animate__delay0-5s"
-                    id="banner-enquiry">Book A Demo</button>
-                    <img class="img-fluid banner-img  wow animate__animated animate__fadeInDown animate__delay-1s"
-                    src="images/banner-img.png" alt="banner image">
-                </div>
+              
+               
             </div>
         </div>
     </section>
@@ -433,7 +419,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
