--- a/media.html
+++ b/media.html
@@ -411,7 +411,10 @@
                     </div>
                 </div>
                 <!-- press releases -->
+
             </div>
+            
+            <button class="btn btn-view-more btn-primary">View More</button>
         </div>
     </section>
     <!-- media releaes -->
@@ -583,7 +586,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
