--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storage-Grain Chain</title>
+    <title>Our Products-Grain Chain</title>
     <!-- bootrap cdn -->
 
 
@@ -331,7 +331,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
