--- a/seed-audit.html
+++ b/seed-audit.html
@@ -60,12 +60,13 @@
     <!-- header ends her -->
 
     <!-- banner starts  -->
-    <section class="banner banner-trumodity banner-2 bg-transparent">
+    <section class="banner banner-seed-audit banner-2 bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
-                <img class="title-image img-fluid" src="images/trumodity/banner-title-img.png" alt="">
-                <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">
-                    Comprehensive Transaction Platform </p>
+                <img class="title-image img-fluid" src="images/seed-audit/banner-title.png" alt="">
+                <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Preharvest Management
+                    Solution
+                </p>
                 <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
                     id="banner-enquiry">Book a Demo</button>
             </div>
@@ -73,89 +74,71 @@
     </section>
     <!-- banner starts  -->
 
-    <!-- about trumodity -->
-    <section class="what-is-trumodity">
+    <div class="what-is-seed-audit">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="images/trumodity/computer-img.png" alt="" class="display-img mobile-hide img-fluid">
+                    <div class="seed-audit-content">
+                        <img src="images/seed-audit/section-title-img.png" class="section-title img-fluid" alt="">
+                        <p>Seed Audit brings the efficiency, transparency and reliability of our postharvest solutions
+                            to the preharvest process.
+                            All data from seed to harvest (seed receipts, fertilizers, geofenced crop maps, etc) is
+                            recorded and tracked securely through our solution, while also allowing for audits and
+                            certification.</p>
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="about-trumodity">
-                        <img src="images/trumodity/what-is-trumodity.png" alt="" class="title-img img-fluid">
-                        <p><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
-                            agricultural industry. Cmodity facilitates prompt payment to Producers and suppliers and the
-                            immediate availability of tradable commodities to buyers. It attacks fraud and corruption
-                            through certification and accountability while streamlining procedures that burden the
-                            marketplace and its participants. Cmodity's innovative blockchain architecture creates a
-                            secure, immutable record of commodity data and transactions along the entire supply chain.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- about trumodity -->
-    <div class="mobile-app-features">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 mobile-hide">
-                    <div class="mobile-app-content">
-                        <h2
-                            class="title orange bottom text-left font-weight-bold   wow animate__animated animate__fadeInUp">
-                            <span>Mobile App Features</span></h2>
-                        <ul class="features-list">
-                            <li>Blockchain-enabled platform with enhanced security,
-                                reliability, transparency and data privacy
-                            </li>
-                            <li>Fast domestic and international settlements
-                                using GrainPay, including instant title transfers</li>
-                            <li>Easily negotiate complex purchase agreements with
-                                multiple parties using smart contracts</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-7">
-                    <h2
-                            class="title orange bottom text-left font-weight-bold desktop-hide wow animate__animated animate__fadeInUp">
-                            <span>Mobile App Features</span></h2>
-                    <ul class="app-img-list owl-carousel owl-theme">
-                        <li><img class="img-fluid" src="images/trumodity/mobile-img.png" alt="">
-                            <p class="desktop-hide mt-2 text-center">Blockchain-enabled platform with enhanced security,
-                                reliability, transparency and data privacy</p>
-                        </li>
-                        <li><img class="img-fluid" src="images/trumodity/mobile-img.png" alt="">
-                            <p  class="desktop-hide mt-2 text-center">Fast domestic and international settlements
-                                using GrainPay, including instant title transfers</p>
-                        </li>
-                      
-                        <li><img class="img-fluid" src="images/trumodity/mobile-img.png" alt="">
-                            <p  class="desktop-hide mt-2 text-center">Easily negotiate complex purchase agreements with
-                                multiple parties using smart contracts</p>
-                        </li>
-                    </ul>
+                    <img src="images/seed-audit/tablet.png" alt="" class="img-fluid mobile-hide display-img">
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- shape img -->
 
-    <img class="w-100 img-fluid mobile-hide" src="images/trumodity/bg-shape-1.png" alt="">
+    <!-- seed audit features -->
+
+    <div class="seed-audit-features">
+        <div class="container">
+            <h2 class="title text-left  bottom font-weight-bold   wow animate__animated animate__fadeInUp">
+                <span>Features</span></h2>
+            <div class="seed-features-slider">
+                <ul class="seed-features owl-carousel owl-theme">
+                    <li class="slide-1">
+                        <img src="images/seed-audit/mobile-1.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-2">
+                        <img src="images/seed-audit/mobile-2.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-3">
+                        <img src="images/seed-audit/mobile-3.png" class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-4">
+                        <img src="images/seed-audit/mobile-4.png"  class="img-fluid" alt="">
+                    </li>
+                    <li class="slide-5">
+                        <img src="images/seed-audit/mobile-5.png"  class="img-fluid" alt="">
+                    </li>
+                </ul>
+                <img src="images/seed-audit/mobile-features-bg-1.png" class="img-fluid slide-bg active" id="slide-1" alt="">
+                <img src="images/seed-audit/mobile-features-bg-2.png" class="img-fluid slide-bg" id="slide-2" alt="">
+                <img src="images/seed-audit/mobile-features-bg-3.png" class="img-fluid slide-bg" id="slide-3" alt="">
+                <img src="images/seed-audit/mobile-features-bg-4.png" class="img-fluid slide-bg" id="slide-4" alt="">
+                <img src="images/seed-audit/mobile-features-bg-5.png" class="img-fluid slide-bg" id="slide-5" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- seed audit features -->
+
+
+    <img src="images/seed-audit/bg-grey-2.png" class="img-fluid desktop-hide" alt="">
     <!-- product-details -->
-<div class="img-wrapper-shape bg-white">
-    <img class="w-100 img-fluid desktop-hide" src="images/buyers/gray-shape-3.png" alt="">
-</div>
-    <div class="product-details product-details-2">
- 
-
+    <div class="product-details product-details-2 seed-product-details">
         <div class="title-image-wrapper">
-            <img src="images/buyers/trumodity-icon.png" alt="">
+            <img src="images/seed-audit/seed-audit-logo-2.png" alt="">
         </div>
         <h2 class="title orange small bottom bottom-center font-weight-bold   wow animate__animated animate__fadeInUp">
-            <span>GrainChain’s suite of products work together to improve efficiency, reliability and
-                accountability to every stage of the commodities supply chain.</span></h2>
+            <span><strong>Seed Audit</strong> is part of <strong>GrainChain’s suite of products</strong> that together
+                improve transparency, reliability and efficiency throughout the commodities market.</span></h2>
         <div class="product-details-inner">
             <div class="container">
                 <!-- product list  -->
@@ -164,12 +147,11 @@
                         <div class="col-md-4">
                             <div
                                 class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
-                                <img class="img-fluid" src="images/buyers/seed-audit-icons.png" alt="">
-                                <p><strong>Seed Audit</strong> is our preharvest management solution, which securely
-                                    records
-                                    and tracks all data from seed to harvest. This data feeds into Trumodity and SiloSys
-                                    to
-                                    add a new level of traceability, efficiency and transparency to the supply chain.
+                                <img class="img-fluid" src="images/buyers/trumodity-icon.png" alt="">
+                                <p><strong>Trumodity</strong> facilitates smart contracts between Producers
+                                    and buyers and ensures accurate, real-time tracking of commodities throughout the
+                                    supply chain. It ensures prompt payment for Producers and immediate transfer of
+                                    ownership for buyers.
                                 </p>
                             </div>
                         </div>
@@ -332,7 +314,8 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
+                        href="#">Dwolla Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
